# monadic-ocaml-parser-combinator

./: .gitignore  dune-project  flake.nix  mop.opam
lib/: dune  mop.ml  mop.mli
src/: dune  main.ml
